Fix path arrow on firefox

--- a/_lib/css/styles.css
+++ b/_lib/css/styles.css
@@ -1474,8 +1474,9 @@ button.button--icon:active {
         content: 'V';
         position: absolute;
 
-        bottom: -25px;
-        right: -10px;
+        /* Works on deployed version as font is used */
+        bottom: -30px;
+        right: -8px;
 
 
         background: linear-gradient(126deg, rgba(255, 0, 193, 1) 0%, rgba(0, 198, 255, 1) 10%);
